--- a/cam10_v01/cam10_v01/cam10_v01.csproj
+++ b/cam10_v01/cam10_v01/cam10_v01.csproj
@@ -83,11 +83,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cam_settings.cs">
+    <Compile Include="camSettings.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="cam_settings.Designer.cs">
-      <DependentUpon>cam_settings.cs</DependentUpon>
+    <Compile Include="camSettings.Designer.cs">
+      <DependentUpon>camSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Driver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -109,8 +109,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="cam_settings.resx">
-      <DependentUpon>cam_settings.cs</DependentUpon>
+    <EmbeddedResource Include="camSettings.resx">
+      <DependentUpon>camSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
