Overscan added in 0.5v. ascom driver\

--- a/cam10_v05/cam10_v05/cam10_v05.csproj
+++ b/cam10_v05/cam10_v05/cam10_v05.csproj
@@ -110,6 +110,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="camSettings.resx">
+      <DependentUpon>camSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
